Берегитесь мошенники Мы же блять учимся и с каждым днем наша сила растет и ваши наеберские транзнакции одна за другой попадают в список пидорасов. Мы. Идем. За. Вами.

--- a/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj
+++ b/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="CallMeSaninaPassportMan.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SeeYouLaterAccountaitor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="help.h" />
