Добавлен 4 шаблон , он отбирает клиентов у которых больше 3 аккаунтов

--- a/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj
+++ b/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CallMeSaninaPassportMan.cpp" />
+    <ClCompile Include="HereLookingPIDCards.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SeeYouLaterAccountaitor.cpp" />
   </ItemGroup>
