--- a/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj.filters
+++ b/BankDatabaseSecurityMonitor/BankDatabaseSecurityMonitor.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="SeeYouLaterAccountaitor.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="HereLookingPIDCards.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="help.h">
